Home - Work in progress

--- a/service-3-modal.html
+++ b/service-3-modal.html
@@ -1,35 +1,34 @@
-   <div class="modal-body">
-   
+<div class="modal-body">
+
    <div class="row">
-<div class="col-md-12">
- <div class="exit-modal" data-dismiss="modal"><i class="fa fa-times"></i></div>
-   
-   <h2 class="modal-title">Nutritional Diets</h2>
-   
-   <p class="large-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer <strong>commodo sapien</strong> felis. Pellentes faucibus <strong>sollicitudin</strong> ante,at porta <strong>felisrutrum</strong> eget.</p>
+      <div class="col-md-12">
+         <div class="exit-modal" data-dismiss="modal"><i class="fa fa-times"></i></div>
 
-<div class="row">
-<div class="col-sm-6">
+         <h2 class="modal-title">NUTRICIÒN</h2>
 
-<p>Cras eu nibh non dui mattis pretium id vitae erat. Quisque justo nisi, malesuada eget lorem ac, posuere dictum justo. Vestibulum vitae scelerisque ante. Duis at mi vel odio fermentum accumsan at nec massa. Donec id velit porta, mattis lorem vitae, convallis nunc. Phasellus euismod vulputate lacus ac commodo. Sed vulputate condimentum elit id ornare. Nulla ante ipsum, blandit gravida lobortis at, laoreet vitae velit</p>
+         <p class="large-text">
+            Recordemos que los felinos son 100% carnívoros estrictos. Siempre indicaremos alimentos de acuerdo a la
+            etapa de su vida, más allá de que quizás en algún momento se requiera una dieta medicada por alguna
+            enfermedad.
+
+            Es importante que el gatito en sus primeras etapas de la vida pueda probar distintos ingredientes caseros
+            proteicos como las carnes y pescados que siempre estarán indicados bajo supervisión médica.
+
+            En caso de querer realizar una dieta casera, debe estar supervisada por un medico especialista en nutricion
+            con los controles requeridos y adaptada a cada animal.
+
+            En caninos, que son omnivoros, podemos elegir tambien entre una dieta balanceada o una dieta casera, pero
+            siempre supervisada por un veterinario especialista.
+            Existen alimentos que no podemos suministar a nuestras mascotas.
+            Por ejemplo cosas dulces, cebolla, uvas, condimentos, alimentos ricos en grasa o huesos de pollo , o de
+            carne pequeños.
+            Recomendamos que todas las carnes esten cocidas previo a su suministro.
+         </p>
+
+      </div>
+      <!--col-md-12-->
+   </div>
+   <!--row-->
 
 </div>
-
-<div class="col-sm-6">
-
-<ul class="list-items">
-<li>Mauris facilisis lacus sed dolor fermentum</li>
-<li>Curabitur lobortis magna at est mattis, posuere sollicitudin</li>
-<li>Pellentesque id fermentum enim, non aliquam libero</li>
-<li>Nulla ante ipsum, blandit gravida lobortis at, laoreet vitae</li>
-<li>Phasellus euismod vulputate lacus ac commodo.</li>
-</ul>
-
-</div>
-
-</div><!--row-->
-
-</div><!--col-md-12-->
-</div><!--row-->
-	
-</div><!--modal body-->
+<!--modal body-->
