--- a/service-5-modal.html
+++ b/service-5-modal.html
@@ -1,35 +1,34 @@
-   <div class="modal-body">
-   
+<div class="modal-body">
+
    <div class="row">
-<div class="col-md-12">
- <div class="exit-modal" data-dismiss="modal"><i class="fa fa-times"></i></div>
-   
-   <h2 class="modal-title">Injuries Treatment</h2>
-   
-   <p class="large-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer <strong>commodo sapien</strong> felis. Pellentes faucibus <strong>sollicitudin</strong> ante,at porta <strong>felisrutrum</strong> eget.</p>
+      <div class="col-md-12">
+         <div class="exit-modal" data-dismiss="modal"><i class="fa fa-times"></i></div>
 
-<div class="row">
-<div class="col-sm-6">
+         <h2 class="modal-title">TRATAMIENTO EN URGENCIAS</h2>
 
-<p>Cras eu nibh non dui mattis pretium id vitae erat. Quisque justo nisi, malesuada eget lorem ac, posuere dictum justo. Vestibulum vitae scelerisque ante. Duis at mi vel odio fermentum accumsan at nec massa. Donec id velit porta, mattis lorem vitae, convallis nunc. Phasellus euismod vulputate lacus ac commodo. Sed vulputate condimentum elit id ornare. Nulla ante ipsum, blandit gravida lobortis at, laoreet vitae velit</p>
+         <p class="large-text">
+            ¿Como identifico una urgencia? Implica un caso que requiere asistencia medica en el corto plazo pero no esta
+            en riesgo la vida , o de que la situación emperoro. Una urgencia puede convertirse en emergencia si no es
+            tratada a tiempo. Por ej: crisis asmaticas, dolor abdominal agudo, fiebre, vomitos y diarreas que no cesan.
+
+            En nuestra clinica contamos con medicos veterinarios los cuales van a poder realizar la atención primaria en
+            la urgencia y luego si es necesario la internacion se derivara al centro correspondiente en caso de
+            necesitar una internacion 24 hs.
+         </p>
+
+         <h2 class="modal-title">TRATAMIENTO EN EMERGENCIAS</h2>
+
+         <p class="large-text">
+            ¿ Como identifico una emergencia ? Implica que deben tomarse acciones y decisiones medicas de manera
+            inmediata ya que son situaciones en las que esta puesta en juego la vida del paciente. Por ej: asfixia,
+            traumatismos y hemorragias severas, perdida no recuperada del conocimiento, accidentes de transito,
+            electrocucion, crisis convulsivas.
+         </p>
+
+      </div>
+      <!--col-md-12-->
+   </div>
+   <!--row-->
 
 </div>
-
-<div class="col-sm-6">
-
-<ul class="list-items">
-<li>Mauris facilisis lacus sed dolor fermentum</li>
-<li>Curabitur lobortis magna at est mattis, posuere sollicitudin</li>
-<li>Pellentesque id fermentum enim, non aliquam libero</li>
-<li>Nulla ante ipsum, blandit gravida lobortis at, laoreet vitae</li>
-<li>Phasellus euismod vulputate lacus ac commodo.</li>
-</ul>
-
-</div>
-
-</div><!--row-->
-
-</div><!--col-md-12-->
-</div><!--row-->
-	
-</div><!--modal body-->
+<!--modal body-->
