--- a/service-1-modal.html
+++ b/service-1-modal.html
@@ -1,36 +1,23 @@
-   <div class="modal-body">
-   
+<div class="modal-body">
+
    <div class="row">
-<div class="col-md-12">
- <div class="exit-modal" data-dismiss="modal"><i class="fa fa-times"></i></div>
-   
-   <h2 class="modal-title">Annual Examinations</h2>
-   
-   <p class="large-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer <strong>commodo sapien</strong> felis. Pellentes faucibus <strong>sollicitudin</strong> ante,at porta <strong>felisrutrum</strong> eget.</p>
+      <div class="col-md-12">
+         <div class="exit-modal" data-dismiss="modal"><i class="fa fa-times"></i></div>
 
-<div class="row">
-<div class="col-sm-6">
+         <h2 class="modal-title">EXAMINACIONES ANUALES</h2>
 
-<p>Cras eu nibh non dui mattis pretium id vitae erat. Quisque justo nisi, malesuada eget lorem ac, posuere dictum justo. Vestibulum vitae scelerisque ante. Duis at mi vel odio fermentum accumsan at nec massa. Donec id velit porta, mattis lorem vitae, convallis nunc. Phasellus euismod vulputate lacus ac commodo. Sed vulputate condimentum elit id ornare. Nulla ante ipsum, blandit gravida lobortis at, laoreet vitae velit</p>
+         <p class="large-text">
+            Se realizaran según edad y patologías previas, en animales gerontes recomendamos un chequeo clínico, un
+            análisis de sangre de rutina y un chequeo cardiaco anual.
+            En gatos recomendamos a partir de los 7años, en razas chicas a partir de los 10años y en perros grandes a
+            partir de los 5 años.
+         </p>
+         <!--row-->
 
-
-</div>
-
-<div class="col-sm-6">
-
-<ul class="list-items">
-<li>Mauris facilisis lacus sed dolor fermentum</li>
-<li>Curabitur lobortis magna at est mattis, posuere sollicitudin</li>
-<li>Pellentesque id fermentum enim, non aliquam libero</li>
-<li>Nulla ante ipsum, blandit gravida lobortis at, laoreet vitae</li>
-<li>Phasellus euismod vulputate lacus ac commodo.</li>
-</ul>
+      </div>
+      <!--col-md-12-->
+   </div>
+   <!--row-->
 
 </div>
-
-</div><!--row-->
-
-</div><!--col-md-12-->
-</div><!--row-->
-	
-</div><!--modal body-->
+<!--modal body-->
