--- a/service-2-modal.html
+++ b/service-2-modal.html
@@ -1,35 +1,37 @@
-   <div class="modal-body">
-   
+<div class="modal-body">
+
    <div class="row">
-<div class="col-md-12">
- <div class="exit-modal" data-dismiss="modal"><i class="fa fa-times"></i></div>
-   
-   <h2 class="modal-title">Vaccination Programs</h2>
-   
-   <p class="large-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer <strong>commodo sapien</strong> felis. Pellentes faucibus <strong>sollicitudin</strong> ante,at porta <strong>felisrutrum</strong> eget.</p>
+      <div class="col-md-12">
+         <div class="exit-modal" data-dismiss="modal"><i class="fa fa-times"></i></div>
 
-<div class="row">
-<div class="col-sm-6">
+         <h2 class="modal-title">PROGRAMA DE VACUNACIÒN</h2>
 
-<p>Cras eu nibh non dui mattis pretium id vitae erat. Quisque justo nisi, malesuada eget lorem ac, posuere dictum justo. Vestibulum vitae scelerisque ante. Duis at mi vel odio fermentum accumsan at nec massa. Donec id velit porta, mattis lorem vitae, convallis nunc. Phasellus euismod vulputate lacus ac commodo. Sed vulputate condimentum elit id ornare. Nulla ante ipsum, blandit gravida lobortis at, laoreet vitae velit</p>
+         <p class="large-text">
+            Cachorros: Comienza a los 45 dìas con la vacuna contra parvovirus y moquillo. Se continua con refuerzos cada
+            21dìas entre vacunas con dos dosis de quintuple y dos de sextuple , y se termina el plan con la vacuna
+            antirrabica.
+
+            Perros adultos : Anualmente debemos revacunar con una dosis de vacuna sextuple y antirrabica y leptospirosis
+            cada 6 meses en animales hasta 3 años de vida y luego a partir de los 3 años anual (esta incluida con la
+            vacuna sextuple)
+
+            Gatos: Los planes de vacunas se realizan bajo normas internacionales para las enfermedades más importantes
+            que los pueden afectar. La vacunación comienza a los dos meses con la triple felina y leucemia, previo test
+            serologico para descartar leucemia y el virus de la inmunodeficiencia felino; y luego se realizarán
+            refuerzos en intervalos de cada 15 días a 30 días.
+            Se concluye con la vacuna antirrábica.
+
+            Es importante destacar que la vacuna de Leucemia Felina DEBE ser aplicada desde los 2 meses de edad y luego
+            se evaluará si se sigue aplicando el resto de la vida del gato. La vacunación es obligatoria, aunque el gato
+            no salga de casa e incluso si el gatito es añoso, ya que su sistema inmune las necesitará.
+            En gatos de riesgo (salida al exterior) se recomienda la primera exposición y refuerzos anuales y en gatos
+            indoor (de interior) se recomienda una primera exposicion y su refuerzo solamente
+         </p>
+
+      </div>
+      <!--col-md-12-->
+   </div>
+   <!--row-->
 
 </div>
-
-<div class="col-sm-6">
-
-<ul class="list-items">
-<li>Mauris facilisis lacus sed dolor fermentum</li>
-<li>Curabitur lobortis magna at est mattis, posuere sollicitudin</li>
-<li>Pellentesque id fermentum enim, non aliquam libero</li>
-<li>Nulla ante ipsum, blandit gravida lobortis at, laoreet vitae</li>
-<li>Phasellus euismod vulputate lacus ac commodo.</li>
-</ul>
-
-</div>
-
-</div><!--row-->
-
-</div><!--col-md-12-->
-</div><!--row-->
-	
-</div><!--modal body-->
+<!--modal body-->
