Navigation - Work in progress

--- a/index.html
+++ b/index.html
@@ -54,8 +54,15 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
-                            <a class="logo" href="index.html"><img class="img-responsive" src="images/logo.png"
-                                    alt="PetClinic" /></a>
+                            <a 
+                                class="logo" 
+                                href="index.html">
+                                <img 
+                                    class="img-responsive" 
+                                    src="images/icons/sub_logo_png_trimmed.png"
+                                    alt="Veterinaria Madagascar" 
+                                />
+                            </a>
                         </div>
 
                         <div class="my-nav collapse navbar-collapse" id="collapse-navigation">
@@ -126,8 +133,7 @@
                 Nuestra misión consiste en brindar una solución integral a la atención de tu mascota.
             </p>
             <span class="btn-round btn-blue social-whatsapp">
-                <a 
-                    style="color: white;" 
+                <a style="color: white;"
                     href="https://api.whatsapp.com/send?phone=2215777308&text=Hola,%20queria%20contactarme%20con%20ustedes.%20Tengo%20una%20consulta.">
                     Contactanos: (221) 577 - 7308
                 </a>
@@ -175,7 +181,7 @@
 
                     <p class="f-italic24 margin-48b">
                         Veterinaria madagascar posee una trayectoria de 11 años en la ciudad, contamos con servicio de
-                        atención <strong>clínica</strong>, <strong>cirugía</strong>, <strong>ecografía</strong>, y
+                        atención <strong>clínica</strong>, <strong>cirugía</strong>, <strong>ecografía</strong> y
                         especialidades como
                         <strong>dermatología</strong>, <strong>etología</strong>,
                         <strong>cardiología</strong> y atención de animales <strong>exóticos</strong>.
@@ -458,9 +464,13 @@
     <footer>
 
         <ul class="get-social alignc">
-            <li><a class="social-facebook" href="https://www.facebook.com/veterinariamadagascar80/" target="_blank"><i class="fa fa-facebook"></i></a></li>
-            <li><a class="social-instagram" href="https://www.instagram.com/veterinariamadagascar/?hl=es-la" target="_blank"><i class="fa fa-instagram"></i></a></li>
-            <li><a class="social-whatsapp" href="https://api.whatsapp.com/send?phone=2215777308&text=Hola,%20queria%20contactarme%20con%20ustedes.%20Tengo%20una%20consulta." target="_blank"><i class="fa fa-whatsapp"></i></a></li>
+            <li><a class="social-facebook" href="https://www.facebook.com/veterinariamadagascar80/" target="_blank"><i
+                        class="fa fa-facebook"></i></a></li>
+            <li><a class="social-instagram" href="https://www.instagram.com/veterinariamadagascar/?hl=es-la"
+                    target="_blank"><i class="fa fa-instagram"></i></a></li>
+            <li><a class="social-whatsapp"
+                    href="https://api.whatsapp.com/send?phone=2215777308&text=Hola,%20queria%20contactarme%20con%20ustedes.%20Tengo%20una%20consulta."
+                    target="_blank"><i class="fa fa-whatsapp"></i></a></li>
         </ul>
 
     </footer>
