Seccion Nosotros y correccion home

--- a/index.html
+++ b/index.html
@@ -54,21 +54,16 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
-                            <a 
-                                class="logo" 
-                                href="index.html">
-                                <img 
-                                    class="img-responsive" 
-                                    src="images/icons/sub_logo_png_trimmed.png"
-                                    alt="Veterinaria Madagascar" 
-                                />
+                            <a class="logo" href="index.html">
+                                <img class="img-responsive" src="images/icons/sub_logo_png_trimmed.png"
+                                    alt="Veterinaria Madagascar" />
                             </a>
                         </div>
 
                         <div class="my-nav collapse navbar-collapse" id="collapse-navigation">
                             <ul class="nav menu-nav">
                                 <li class="current_page_item"><a href="#">Home</a></li>
-                                <li><a href="about.html">About</a></li>
+                                <li><a href="nosotros.html">Nosotros</a></li>
                                 <li><a href="services.html">Services</a>
                                     <ul class="sub-menu">
                                         <li><a href="services.html">Services 1</a></li>
@@ -359,9 +354,7 @@
                         <h5>BIENESTAR Y BELLEZA</h5>
 
                         <p class="service-desc">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Fuga qui officiis hic alias! At facere repellat earum perspiciatis
-                            maiores molestiae iure sapiente amet nisi? Itaque delectus doloribus possimus non molestiae.
+                            Recomendaciones sobre baños en perros y gatos y productos a utilizar para su higiene diaria.
                         </p>
 
                     </div>
@@ -405,9 +398,9 @@
                         <h5>COMPORTAMIENTO</h5>
 
                         <p class="service-desc">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta at porro alias, facilis
-                            impedit ipsam dignissimos expedita, qui quisquam sed minus ipsum nihil praesentium maxime.
-                            Aliquid a nobis repudiandae aspernatur.
+                            Todo animal debe tener ejercicio diario, por ejemplo en un perro mediano se recomienda que
+                            debe caminar 2 km
+                            por día si vive en departamento
                         </p>
 
                     </div>
