--- a/service-4-modal.html
+++ b/service-4-modal.html
@@ -1,21 +1,31 @@
 <div class="modal-body">
-
    <div class="row">
       <div class="col-md-12">
          <div class="exit-modal" data-dismiss="modal"><i class="fa fa-times"></i></div>
-
          <h2 class="modal-title">BIENESTAR Y BELLEZA</h2>
-
          <p class="large-text">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam quaerat repudiandae veniam voluptatibus
-            porro nihil cupiditate aut necessitatibus soluta eligendi debitis quibusdam ipsa quae, nisi nostrum animi
-            perspiciatis placeat laudantium!
+            <strong>Higiene:</strong>
+            <br/>
+            Recomendaciones sobre baños en perros y gatos y productos a utilizar para su higiene diaria.
+            <br/>
+            Gatos: No recomendamos bañar a los gatos. Si bien algunos estan acostumbrados desde los pocos meses de vida les genera una situación de estres y como consecuente baja de defensas.
+            Se pueden utilizar baños en seco y luego un cepillo para extraer el pelo muerto.
+            <br/>
+            Perros: Hasta que terminen el plan de vacunación no se recomienda bañarlos en petshops o peluquerias caninas. Se pueden hacer baños en casa, utilizando productos como shampoo para cachorros, con la menor frecuencia posible.
+            <br/>
+            Es importante estar atentos a la piel de nuestras mascotas ya que pueden reaccionar a determinados productos como por ejemplo para la limpieza de la casa, aerosoles.
+            <br/>
+            Si nuestra mascota comienza a presentar prurito ( rascarse) y su piel se enrojece debemos consultar con el veterinario y nos recomendara los productos adecuados para utilizar en cada caso.
+            <br/>
+            Es fundamental siempre consultar con tu veterinario de confianza para que te recomiende el mejor producto para tu mascota
+            <br/>
+            Recuerde que su mascota pierde pelo todo el año, haciendo dos mudas por año aproximadamente. Gatos y perros de pelo largo deben ser cepillados 1 vez al dia para eliminar el pelo muerto, tambien es importante acostumbrarlos desde cachorros a esto para evitar complicaciones a la hora de cepillarlos.
+            <br/>
+            Nunca bañe a su mascotas con productos para uso humano, solamente aptos para animales o jabon blanco.
          </p>
-
       </div>
       <!--col-md-12-->
    </div>
    <!--row-->
-
 </div>
 <!--modal body-->
