--- a/service-6-modal.html
+++ b/service-6-modal.html
@@ -7,9 +7,23 @@
          <h2 class="modal-title">COMPORTAMIENTO</h2>
 
          <p class="large-text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates a eligendi, corporis nam ipsa beatae
-            molestias eius asperiores obcaecati doloremque sequi nisi commodi dolores maxime. Corrupti eos voluptas
-            perspiciatis saepe!
+            Todo animal debe tener ejercicio diario, por ejemplo en un perro mediano se recomienda que debe caminar 2 km
+            por día si vive en departamento
+            <br />
+            Su mascota necesita jugar por lo menos 1 vez al día , se pueden utilizar sogas y pelotas , en el caso de
+            gatos pueden ser elementos colgantes y rodantes.
+            <br />
+            Se recomienda nunca utilizar las manos durante los juegos porque predispone a conductas agresivas.
+            <br />
+            Sociabilización:
+            <br />
+            Los cachorros deben ser adoptados con un mínimo de 60 días de edad (antes deben estar con la madre)
+            <br />
+            Es super importante sociabilizar al cachorro canino hasta los 4 meses de vida y a los felinos hasta los 3
+            meses para lograr un animal de caracter estable
+            <br />
+            También aconsejamos acostumbrarlos a circular en autos, sonidos fuertes, ruidos diarios de ciudad, manipular
+            alimento mientras come, revisarle orejas y boca.
          </p>
 
       </div>
